--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,31 @@
-<!DOCTYPE html>
-<html>
+<!-- <!DOCTYPE html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! it's a great course</h1>
+<h1>Hello Coursera! It's a great course!</h1>
 </body>
-</html>
+</html> -->
+
+<div>Dear all,
+<span>I took <span>this</span> really cool course
+</span></div>
+<span>on Coursera.org. I think it's
+my favorite course I've EVER taken!
+Here is the URL for it:
+</span>
+<a href="...">HTML, CSS and JS for Web Developers</a>
+<div>
+Does anyone know how I can give this course 6
+out of 5 stars?
+</div>
+<div>
+Thank you,
+-Yaakov.... I mean a random student! Definitely not Yaakov.
+</div>
+&lt;
+&gt;
+&amp;
+&copy;
