--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <p>Pleas right click this page and choose inspect</p>
+  <p>Then go to Console tab and see the result</p>
 </body>
 </html>
